model performance table

--- a/Code/Classification/RandomForest/Random_Forest_Classifier_Predictions_All_Features_PCA.ipynb
+++ b/Code/Classification/RandomForest/Random_Forest_Classifier_Predictions_All_Features_PCA.ipynb
@@ -55,108 +55,108 @@
      "text": [
       "all test data\n",
       "          Class                           harmonized_filename  \\\n",
-      "0           SUV          SUV_test_orig_test_00661_resized.jpg   \n",
-      "1           SUV         SUV_test_orig_train_06195_resized.jpg   \n",
-      "2           SUV         SUV_test_orig_train_06253_resized.jpg   \n",
-      "3         Sedan        Sedan_test_orig_test_00728_resized.jpg   \n",
-      "4   Convertible  Convertible_test_orig_test_03444_resized.jpg   \n",
+      "0        Pickup       Pickup_test_orig_test_05620_resized.jpg   \n",
+      "1           SUV          SUV_test_orig_test_08041_resized.jpg   \n",
+      "2   Convertible  Convertible_test_orig_test_00822_resized.jpg   \n",
+      "3   Convertible  Convertible_test_orig_test_00618_resized.jpg   \n",
+      "4        Pickup       Pickup_test_orig_test_05241_resized.jpg   \n",
       "..          ...                                           ...   \n",
-      "88        Sedan        Sedan_test_orig_test_02949_resized.jpg   \n",
-      "89  Convertible  Convertible_test_orig_test_02412_resized.jpg   \n",
-      "90  Convertible  Convertible_test_orig_test_07495_resized.jpg   \n",
-      "91          SUV          SUV_test_orig_test_01451_resized.jpg   \n",
-      "92       Pickup       Pickup_test_orig_test_02951_resized.jpg   \n",
+      "88          SUV          SUV_test_orig_test_07199_resized.jpg   \n",
+      "89  Convertible  Convertible_test_orig_test_06645_resized.jpg   \n",
+      "90        Sedan       Sedan_test_orig_train_00676_resized.jpg   \n",
+      "91        Sedan       Sedan_test_orig_train_04786_resized.jpg   \n",
+      "92          SUV         SUV_test_orig_train_03571_resized.jpg   \n",
       "\n",
       "                                      image_path_blur  \\\n",
-      "0   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "1   ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
-      "2   ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
-      "3   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "4   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "0   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
+      "2   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "3   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "4   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
       "..                                                ...   \n",
-      "88  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "88  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
       "89  ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "90  ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "91  ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
-      "92  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "91  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "92  ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
       "\n",
       "                                   image_path_no_blur  All Features_PCA_0  \\\n",
-      "0   ../../../Images/test/No_Blur/SUV_test_orig_tes...           24.189841   \n",
-      "1   ../../../Images/test/No_Blur/SUV_test_orig_tra...           12.219520   \n",
-      "2   ../../../Images/test/No_Blur/SUV_test_orig_tra...           24.161322   \n",
-      "3   ../../../Images/test/No_Blur/Sedan_test_orig_t...           -4.099487   \n",
-      "4   ../../../Images/test/No_Blur/Convertible_test_...           -9.203965   \n",
+      "0   ../../../Images/test/No_Blur/Pickup_test_orig_...           22.973553   \n",
+      "1   ../../../Images/test/No_Blur/SUV_test_orig_tes...            5.961664   \n",
+      "2   ../../../Images/test/No_Blur/Convertible_test_...          -12.207156   \n",
+      "3   ../../../Images/test/No_Blur/Convertible_test_...           -5.629666   \n",
+      "4   ../../../Images/test/No_Blur/Pickup_test_orig_...           22.388667   \n",
       "..                                                ...                 ...   \n",
-      "88  ../../../Images/test/No_Blur/Sedan_test_orig_t...           -6.879784   \n",
-      "89  ../../../Images/test/No_Blur/Convertible_test_...           -9.542293   \n",
-      "90  ../../../Images/test/No_Blur/Convertible_test_...           15.881731   \n",
-      "91  ../../../Images/test/No_Blur/SUV_test_orig_tes...            1.979564   \n",
-      "92  ../../../Images/test/No_Blur/Pickup_test_orig_...            7.145793   \n",
+      "88  ../../../Images/test/No_Blur/SUV_test_orig_tes...           11.499346   \n",
+      "89  ../../../Images/test/No_Blur/Convertible_test_...          -19.857812   \n",
+      "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...            5.816799   \n",
+      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...          -11.683421   \n",
+      "92  ../../../Images/test/No_Blur/SUV_test_orig_tra...           13.214886   \n",
       "\n",
       "    All Features_PCA_1  All Features_PCA_2  All Features_PCA_3  \\\n",
-      "0            -5.353944            3.409188            8.286682   \n",
-      "1            12.948000           13.662393            0.322938   \n",
-      "2             0.590867            7.004649            2.185908   \n",
-      "3           -10.840219          -15.541879          -20.017697   \n",
-      "4            10.866028           -7.620927          -10.245730   \n",
+      "0            20.998905            6.563697           12.701136   \n",
+      "1           -12.432886          -13.545941            5.289027   \n",
+      "2           -20.436217           16.482607           -9.366273   \n",
+      "3           -18.343653            9.365736          -14.630939   \n",
+      "4             6.962591            6.695841            4.297897   \n",
       "..                 ...                 ...                 ...   \n",
-      "88            3.990734            7.315486           17.111347   \n",
-      "89          -16.192677            8.279517           13.935344   \n",
-      "90          -15.983639            6.304697           11.330469   \n",
-      "91           -3.494390           -7.026909          -10.114535   \n",
-      "92           23.364697           -5.343775          -18.763533   \n",
+      "88           -0.009996          -13.638639           -6.299581   \n",
+      "89           13.045699           11.519343          -10.447213   \n",
+      "90           -4.898177          -12.652016           11.481651   \n",
+      "91           11.623267          -14.621022            9.876198   \n",
+      "92           -8.091207           -5.508527           17.332663   \n",
       "\n",
       "    All Features_PCA_4  All Features_PCA_5  ...  All Features_PCA_1240  \\\n",
-      "0           -17.785014          -16.507821  ...               0.590218   \n",
-      "1            -6.503505            5.477149  ...              -0.385268   \n",
-      "2           -12.841302           -3.440686  ...               0.097145   \n",
-      "3             1.188028           -1.422613  ...              -0.266812   \n",
-      "4            15.230822          -14.637056  ...              -0.193305   \n",
+      "0             7.964405            1.083558  ...               0.392209   \n",
+      "1             1.271997            4.281756  ...              -0.515538   \n",
+      "2             7.696901          -10.725749  ...              -0.251145   \n",
+      "3            12.209700          -11.077177  ...              -0.075696   \n",
+      "4            13.043093            5.451719  ...              -1.543443   \n",
       "..                 ...                 ...  ...                    ...   \n",
-      "88           -4.480714          -10.178239  ...              -0.271607   \n",
-      "89            7.876961          -15.649933  ...               0.577037   \n",
-      "90           -3.785225           -8.131360  ...              -0.011164   \n",
-      "91           18.482240           -0.449605  ...               0.467714   \n",
-      "92            5.322151            0.169505  ...               0.123798   \n",
+      "88            4.551846           -3.843374  ...              -0.164451   \n",
+      "89            6.136510           -2.518590  ...               0.224751   \n",
+      "90            0.548339          -12.737478  ...               0.240004   \n",
+      "91            0.176486           -5.066620  ...               0.254412   \n",
+      "92           -2.428351            0.525998  ...              -0.613803   \n",
       "\n",
       "    All Features_PCA_1241  All Features_PCA_1242  All Features_PCA_1243  \\\n",
-      "0                0.067863              -0.072049              -0.036748   \n",
-      "1               -0.595833               0.087051              -0.117248   \n",
-      "2               -0.442154              -0.333089               0.385312   \n",
-      "3               -0.827017              -0.098920               0.848387   \n",
-      "4                0.581778               0.843821              -0.563212   \n",
+      "0                0.431248              -0.762200               1.197558   \n",
+      "1               -0.035794               0.323531              -0.406426   \n",
+      "2                0.366024              -0.179400              -1.078422   \n",
+      "3               -1.079036               0.759869              -0.617673   \n",
+      "4                0.331695               0.328752              -0.013205   \n",
       "..                    ...                    ...                    ...   \n",
-      "88              -0.132447              -0.091503              -0.360158   \n",
-      "89              -0.270347               0.181194               1.487782   \n",
-      "90              -0.240483               0.652127              -0.027718   \n",
-      "91               0.191442               0.757926              -0.354645   \n",
-      "92              -0.151661              -0.124144              -0.800477   \n",
+      "88              -0.028136               0.221309              -1.752510   \n",
+      "89               0.497925              -0.610726              -0.024579   \n",
+      "90               0.654972              -0.256768               0.005606   \n",
+      "91              -0.048216              -0.336135              -0.111575   \n",
+      "92               0.498929              -0.200079               0.010925   \n",
       "\n",
       "    All Features_PCA_1244  All Features_PCA_1245  All Features_PCA_1246  \\\n",
-      "0               -0.230772              -0.387870               0.658966   \n",
-      "1                0.576187              -0.175961              -0.367276   \n",
-      "2               -0.186064              -0.356838              -0.456831   \n",
-      "3               -0.035210              -0.067890               0.622868   \n",
-      "4                0.682042              -0.162764              -0.105226   \n",
+      "0               -0.129846               0.726487              -1.211721   \n",
+      "1               -0.816935              -0.203141              -0.579614   \n",
+      "2               -0.062062               1.047896               0.175091   \n",
+      "3                0.773769               0.152802              -0.268483   \n",
+      "4               -0.818107              -1.065723              -1.016969   \n",
       "..                    ...                    ...                    ...   \n",
-      "88              -0.069330               0.345966              -0.325294   \n",
-      "89               1.210559              -0.707528              -0.358803   \n",
-      "90               0.268978               0.259013              -0.104524   \n",
-      "91              -0.557661              -0.077274               0.699362   \n",
-      "92               0.001545               1.421789              -0.094797   \n",
+      "88              -0.397213               0.502855               0.050493   \n",
+      "89               0.469170               0.751854               0.651190   \n",
+      "90              -0.408048              -0.552364              -0.129252   \n",
+      "91               0.377692               0.360716               0.552224   \n",
+      "92              -1.437460               0.102954               0.325945   \n",
       "\n",
       "    All Features_PCA_1247  All Features_PCA_1248  All Features_PCA_1249  \n",
-      "0                0.525238              -0.588856               0.667842  \n",
-      "1                0.996419              -0.054803               0.560479  \n",
-      "2               -0.553160              -0.184211              -0.126749  \n",
-      "3               -0.895439               0.632801               0.453250  \n",
-      "4                0.591590               0.600809               0.293710  \n",
+      "0               -0.554877               0.943314               0.964773  \n",
+      "1               -0.119499              -0.837906              -0.183398  \n",
+      "2               -0.885347              -0.805116              -0.129853  \n",
+      "3               -0.113670              -0.017256               0.178108  \n",
+      "4               -0.175945              -0.164543              -0.404169  \n",
       "..                    ...                    ...                    ...  \n",
-      "88              -0.206045               0.204797               0.522377  \n",
-      "89              -0.473933              -0.742445               0.820921  \n",
-      "90              -0.771116               0.193949               0.507832  \n",
-      "91               0.067800              -0.413927               0.123804  \n",
-      "92               0.590467              -0.062087               0.787476  \n",
+      "88              -0.337516              -1.451758              -1.219367  \n",
+      "89              -0.157917               0.061688               0.671482  \n",
+      "90               0.131717              -0.055589               0.599182  \n",
+      "91              -0.290395              -0.337396               1.240404  \n",
+      "92              -0.261540              -0.916725              -0.606214  \n",
       "\n",
       "[1489 rows x 1254 columns]\n"
      ]
@@ -201,15 +201,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator RandomForestClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "best model\n",
-      "RandomForestClassifier(max_depth=60, min_samples_leaf=4, min_samples_split=5)\n",
+      "RandomForestClassifier(bootstrap=False, max_depth=60, min_samples_leaf=2,\n",
+      "                       min_samples_split=5, n_estimators=1000)\n",
       "predictions head\n",
-      "['Convertible' 'Sedan' 'SUV' 'Sedan' 'Sedan']\n",
-      "prediction time in minutes:  3.283421198527018e-05\n",
-      "prediction time per image in minutes:  2.188947465684679e-06\n",
+      "['Pickup' 'Sedan' 'Convertible' 'Convertible' 'Pickup']\n",
+      "prediction time in minutes:  0.00935910145441691\n",
+      "prediction time per image in minutes:  6.285494596653398e-06\n",
       "saved prediction statistics\n",
       "limited cols in test data\n",
       "added to test data\n"
@@ -237,7 +250,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   },
   "vscode": {
    "interpreter": {
