--- a/Code/Classification/RandomForest/Random_Forest_Classifier_Predictions_All_Data.ipynb
+++ b/Code/Classification/RandomForest/Random_Forest_Classifier_Predictions_All_Data.ipynb
@@ -55,134 +55,134 @@
      "text": [
       "all test data\n",
       "          Class                            harmonized_filename  \\\n",
-      "0         Sedan        Sedan_test_orig_train_00139_resized.jpg   \n",
-      "1         Sedan        Sedan_test_orig_train_07621_resized.jpg   \n",
-      "2   Convertible  Convertible_test_orig_train_03174_resized.jpg   \n",
-      "3         Sedan        Sedan_test_orig_train_03693_resized.jpg   \n",
-      "4         Sedan        Sedan_test_orig_train_02582_resized.jpg   \n",
+      "0        Pickup        Pickup_test_orig_test_05620_resized.jpg   \n",
+      "1           SUV           SUV_test_orig_test_08041_resized.jpg   \n",
+      "2   Convertible   Convertible_test_orig_test_00822_resized.jpg   \n",
+      "3   Convertible   Convertible_test_orig_test_00618_resized.jpg   \n",
+      "4        Pickup        Pickup_test_orig_test_05241_resized.jpg   \n",
       "..          ...                                            ...   \n",
-      "88        Sedan         Sedan_test_orig_test_05891_resized.jpg   \n",
-      "89          SUV          SUV_test_orig_train_07587_resized.jpg   \n",
-      "90  Convertible   Convertible_test_orig_test_01119_resized.jpg   \n",
-      "91          SUV          SUV_test_orig_train_00986_resized.jpg   \n",
-      "92  Convertible   Convertible_test_orig_test_03679_resized.jpg   \n",
+      "88        Sedan         Sedan_test_orig_test_03443_resized.jpg   \n",
+      "89       Pickup       Pickup_test_orig_train_04088_resized.jpg   \n",
+      "90        Sedan        Sedan_test_orig_train_03673_resized.jpg   \n",
+      "91        Sedan        Sedan_test_orig_train_06616_resized.jpg   \n",
+      "92  Convertible  Convertible_test_orig_train_05861_resized.jpg   \n",
       "\n",
       "                                      image_path_blur  \\\n",
-      "0   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "1   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "0   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/Blurred/SUV_test_orig_tes...   \n",
       "2   ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "3   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "4   ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "3   ../../../Images/test/Blurred/Convertible_test_...   \n",
+      "4   ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
       "..                                                ...   \n",
       "88  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
-      "89  ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
-      "90  ../../../Images/test/Blurred/Convertible_test_...   \n",
-      "91  ../../../Images/test/Blurred/SUV_test_orig_tra...   \n",
+      "89  ../../../Images/test/Blurred/Pickup_test_orig_...   \n",
+      "90  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
+      "91  ../../../Images/test/Blurred/Sedan_test_orig_t...   \n",
       "92  ../../../Images/test/Blurred/Convertible_test_...   \n",
       "\n",
       "                                   image_path_no_blur  \\\n",
-      "0   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "1   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "0   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "1   ../../../Images/test/No_Blur/SUV_test_orig_tes...   \n",
       "2   ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "3   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "4   ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "3   ../../../Images/test/No_Blur/Convertible_test_...   \n",
+      "4   ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
       "..                                                ...   \n",
       "88  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
-      "89  ../../../Images/test/No_Blur/SUV_test_orig_tra...   \n",
-      "90  ../../../Images/test/No_Blur/Convertible_test_...   \n",
-      "91  ../../../Images/test/No_Blur/SUV_test_orig_tra...   \n",
+      "89  ../../../Images/test/No_Blur/Pickup_test_orig_...   \n",
+      "90  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
+      "91  ../../../Images/test/No_Blur/Sedan_test_orig_t...   \n",
       "92  ../../../Images/test/No_Blur/Convertible_test_...   \n",
       "\n",
       "    ViT_Embedding_Element_0  ViT_Embedding_Element_1  ViT_Embedding_Element_2  \\\n",
-      "0                 -0.093118                 0.023944                -0.003103   \n",
-      "1                 -0.157546                 0.469937                 0.000550   \n",
-      "2                  0.030750                 0.109448                -0.242908   \n",
-      "3                 -0.108213                 0.111616                -0.070978   \n",
-      "4                  0.003776                -0.067427                -0.259577   \n",
+      "0                 -0.347766                 0.167595                 0.154336   \n",
+      "1                 -0.098150                 0.112476                -0.029927   \n",
+      "2                 -0.203125                 0.251158                -0.324457   \n",
+      "3                 -0.211059                 0.216949                -0.437562   \n",
+      "4                 -0.258407                 0.309153                 0.115703   \n",
       "..                      ...                      ...                      ...   \n",
-      "88                -0.114986                 0.416919                 0.006434   \n",
-      "89                -0.305994                 0.223288                 0.097211   \n",
-      "90                -0.173839                 0.076692                -0.421268   \n",
-      "91                -0.267668                 0.138908                 0.038328   \n",
-      "92                -0.155250                 0.203669                -0.095840   \n",
+      "88                -0.170689                 0.167469                -0.165911   \n",
+      "89                -0.249416                 0.215597                 0.156529   \n",
+      "90                -0.040393                 0.276296                -0.051275   \n",
+      "91                -0.114089                 0.125190                -0.260922   \n",
+      "92                -0.161454                 0.394140                -0.254677   \n",
       "\n",
       "    ViT_Embedding_Element_3  ViT_Embedding_Element_4  ViT_Embedding_Element_5  \\\n",
-      "0                 -0.350056                 0.041266                 0.347084   \n",
-      "1                 -0.287341                -0.052400                 0.316043   \n",
-      "2                 -0.441038                 0.030309                 0.144850   \n",
-      "3                 -0.475809                -0.051620                 0.436657   \n",
-      "4                 -0.343545                -0.001688                 0.403953   \n",
+      "0                 -0.086329                -0.084096                 0.403538   \n",
+      "1                 -0.390461                 0.041179                 0.271308   \n",
+      "2                 -0.320937                -0.232326                 0.130335   \n",
+      "3                 -0.345737                -0.208970                 0.345806   \n",
+      "4                  0.006585                 0.145539                 0.066159   \n",
       "..                      ...                      ...                      ...   \n",
-      "88                -0.099978                -0.204515                 0.248269   \n",
-      "89                -0.386351                -0.377188                 0.331570   \n",
-      "90                -0.441278                -0.168950                 0.282274   \n",
-      "91                -0.266403                -0.158171                 0.425292   \n",
-      "92                -0.442104                -0.161215                 0.360146   \n",
+      "88                -0.464237                -0.129780                 0.177970   \n",
+      "89                -0.240929                -0.168694                 0.354225   \n",
+      "90                -0.225824                -0.297258                 0.278150   \n",
+      "91                -0.534182                 0.093819                 0.420588   \n",
+      "92                -0.426034                 0.265536                 0.211613   \n",
       "\n",
       "    ...  VGG_Embedding_Element_502  VGG_Embedding_Element_503  \\\n",
-      "0   ...                   0.189833                   0.110823   \n",
-      "1   ...                   0.212087                   0.635821   \n",
-      "2   ...                   0.033483                   0.347566   \n",
-      "3   ...                   0.280684                   1.392077   \n",
-      "4   ...                   0.113534                   0.262125   \n",
+      "0   ...                   0.022588                   1.133375   \n",
+      "1   ...                   0.000000                   0.253053   \n",
+      "2   ...                   0.000000                   0.235702   \n",
+      "3   ...                   0.128199                   0.387812   \n",
+      "4   ...                   0.036451                   0.602885   \n",
       "..  ...                        ...                        ...   \n",
-      "88  ...                   0.000000                   0.005129   \n",
-      "89  ...                   0.199793                   0.929628   \n",
-      "90  ...                   0.043615                   0.021536   \n",
-      "91  ...                   0.010004                   0.000000   \n",
-      "92  ...                   0.071644                   0.655622   \n",
+      "88  ...                   0.055077                   0.379769   \n",
+      "89  ...                   0.006549                   0.000000   \n",
+      "90  ...                   0.003398                   0.027674   \n",
+      "91  ...                   0.101564                   0.283806   \n",
+      "92  ...                   0.050454                   0.773631   \n",
       "\n",
       "    VGG_Embedding_Element_504  VGG_Embedding_Element_505  \\\n",
-      "0                    0.319500                   0.008201   \n",
-      "1                    0.062735                   0.000000   \n",
-      "2                    0.744787                   0.000000   \n",
-      "3                    0.284330                   0.000000   \n",
-      "4                    0.113362                   0.000000   \n",
+      "0                    0.451472                   0.000000   \n",
+      "1                    0.224052                   0.000000   \n",
+      "2                    0.434525                   0.000162   \n",
+      "3                    0.062208                   0.000000   \n",
+      "4                    0.000000                   0.000000   \n",
       "..                        ...                        ...   \n",
-      "88                   0.138585                   0.000000   \n",
-      "89                   0.305258                   0.000000   \n",
-      "90                   0.026432                   0.000000   \n",
-      "91                   0.010803                   0.015291   \n",
-      "92                   0.129675                   0.000000   \n",
+      "88                   0.151703                   0.000000   \n",
+      "89                   0.485111                   0.000000   \n",
+      "90                   0.026551                   0.000000   \n",
+      "91                   0.220964                   0.000000   \n",
+      "92                   0.412070                   0.000000   \n",
       "\n",
       "    VGG_Embedding_Element_506  VGG_Embedding_Element_507  \\\n",
-      "0                         0.0                   0.006219   \n",
-      "1                         0.0                   0.000000   \n",
-      "2                         0.0                   0.024235   \n",
-      "3                         0.0                   0.052147   \n",
-      "4                         0.0                   0.010891   \n",
+      "0                    0.047339                   0.154326   \n",
+      "1                    0.000000                   0.000000   \n",
+      "2                    0.000000                   0.170900   \n",
+      "3                    0.000000                   0.136773   \n",
+      "4                    0.000000                   0.035047   \n",
       "..                        ...                        ...   \n",
-      "88                        0.0                   0.023525   \n",
-      "89                        0.0                   0.358714   \n",
-      "90                        0.0                   0.000013   \n",
-      "91                        0.0                   0.296516   \n",
-      "92                        0.0                   0.037926   \n",
+      "88                   0.001070                   0.145830   \n",
+      "89                   0.000000                   0.170164   \n",
+      "90                   0.000000                   0.117652   \n",
+      "91                   0.000000                   0.006836   \n",
+      "92                   0.000000                   0.102131   \n",
       "\n",
       "    VGG_Embedding_Element_508  VGG_Embedding_Element_509  \\\n",
-      "0                    0.120207                   1.124781   \n",
-      "1                    0.024936                   0.010255   \n",
-      "2                    0.373275                   0.040228   \n",
-      "3                    0.000000                   0.358211   \n",
-      "4                    0.023042                   0.125790   \n",
+      "0                    0.014707                   0.381150   \n",
+      "1                    0.087972                   0.227599   \n",
+      "2                    0.325055                   0.418985   \n",
+      "3                    0.318834                   0.245252   \n",
+      "4                    0.000000                   0.561562   \n",
       "..                        ...                        ...   \n",
-      "88                   0.001275                   0.669245   \n",
-      "89                   0.080601                   0.075457   \n",
-      "90                   0.039712                   1.059636   \n",
-      "91                   0.030328                   0.587830   \n",
-      "92                   0.073187                   0.000000   \n",
+      "88                   0.207715                   0.018633   \n",
+      "89                   0.000000                   0.392546   \n",
+      "90                   0.117389                   0.781941   \n",
+      "91                   0.240902                   0.981174   \n",
+      "92                   0.006109                   0.016267   \n",
       "\n",
       "    VGG_Embedding_Element_510  VGG_Embedding_Element_511  \n",
-      "0                    0.027993                   0.000000  \n",
-      "1                    0.827088                   0.000000  \n",
-      "2                    0.279140                   0.073507  \n",
-      "3                    0.235602                   0.000000  \n",
-      "4                    0.553510                   0.010388  \n",
+      "0                    0.089064                   0.000000  \n",
+      "1                    0.211084                   0.238225  \n",
+      "2                    0.427169                   0.000000  \n",
+      "3                    1.322474                   0.677609  \n",
+      "4                    0.201122                   0.000000  \n",
       "..                        ...                        ...  \n",
-      "88                   0.289033                   0.031903  \n",
-      "89                   0.332380                   0.000000  \n",
-      "90                   0.645128                   0.056297  \n",
-      "91                   0.304661                   0.000000  \n",
-      "92                   0.459025                   0.420617  \n",
+      "88                   0.334320                   0.010076  \n",
+      "89                   0.002490                   0.000000  \n",
+      "90                   0.247370                   0.121276  \n",
+      "91                   1.254761                   0.000000  \n",
+      "92                   2.911038                   0.000000  \n",
       "\n",
       "[1489 rows x 4893 columns]\n"
      ]
@@ -227,16 +227,28 @@
    "metadata": {},
    "outputs": [
     {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator DecisionTreeClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n",
+      "c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\sklearn\\base.py:347: InconsistentVersionWarning: Trying to unpickle estimator RandomForestClassifier from version 1.4.1.post1 when using version 1.3.0. This might lead to breaking code or invalid results. Use at your own risk. For more info please refer to:\n",
+      "https://scikit-learn.org/stable/model_persistence.html#security-maintainability-limitations\n",
+      "  warnings.warn(\n"
+     ]
+    },
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "best model\n",
-      "RandomForestClassifier(max_depth=20, min_samples_leaf=4, min_samples_split=10,\n",
-      "                       n_estimators=500)\n",
+      "RandomForestClassifier(bootstrap=False, max_depth=30, min_samples_leaf=2,\n",
+      "                       min_samples_split=5, n_estimators=1000)\n",
       "predictions head\n",
-      "['Sedan' 'Convertible' 'Sedan' 'Sedan' 'SUV']\n",
-      "prediction time in minutes:  9.858210881551107e-05\n",
-      "prediction time per image in minutes:  6.572140587700738e-06\n",
+      "['Pickup' 'Sedan' 'Convertible' 'Convertible' 'Pickup']\n",
+      "prediction time in minutes:  0.0082741379737854\n",
+      "prediction time per image in minutes:  5.556842158351512e-06\n",
       "saved prediction statistics\n",
       "limited cols in test data\n",
       "added to test data\n"
@@ -264,7 +276,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.4"
+   "version": "3.12.0"
   },
   "vscode": {
    "interpreter": {
