need to fix ternsorflow installatino

--- a/Code/Classification/ANN/Fit_ANN_Classifier_VGG.ipynb
+++ b/Code/Classification/ANN/Fit_ANN_Classifier_VGG.ipynb
@@ -10,10 +10,79 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "9148cf66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Unexpected exception formatting exception. Falling back to standard exception\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 3553, in run_code\n",
+      "    exec(code_obj, self.user_global_ns, self.user_ns)\n",
+      "  File \"C:\\Users\\ijyli\\AppData\\Local\\Temp\\ipykernel_8124\\1604881158.py\", line 2, in <module>\n",
+      "    from ANN_Classifier_Functions import *\n",
+      "  File \"c:\\Users\\ijyli\\repo\\computer-vision-project\\Code\\Classification\\ANN\\ANN_Classifier_Functions.py\", line 9, in <module>\n",
+      "    from tensorflow.keras.models import Sequential\n",
+      "ModuleNotFoundError: No module named 'tensorflow'\n",
+      "\n",
+      "During handling of the above exception, another exception occurred:\n",
+      "\n",
+      "Traceback (most recent call last):\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\interactiveshell.py\", line 2144, in showtraceback\n",
+      "    stb = self.InteractiveTB.structured_traceback(\n",
+      "          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1435, in structured_traceback\n",
+      "    return FormattedTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1326, in structured_traceback\n",
+      "    return VerboseTB.structured_traceback(\n",
+      "           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1173, in structured_traceback\n",
+      "    formatted_exception = self.format_exception_as_a_whole(etype, evalue, etb, number_of_lines_of_context,\n",
+      "                          ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 1088, in format_exception_as_a_whole\n",
+      "    frames.append(self.format_record(record))\n",
+      "                  ^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 970, in format_record\n",
+      "    frame_info.lines, Colors, self.has_colors, lvals\n",
+      "    ^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\IPython\\core\\ultratb.py\", line 792, in lines\n",
+      "    return self._sd.lines\n",
+      "           ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 734, in lines\n",
+      "    pieces = self.included_pieces\n",
+      "             ^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 677, in included_pieces\n",
+      "    scope_pieces = self.scope_pieces\n",
+      "                   ^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\utils.py\", line 144, in cached_property_wrapper\n",
+      "    value = obj.__dict__[self.func.__name__] = self.func(obj)\n",
+      "                                               ^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 614, in scope_pieces\n",
+      "    scope_start, scope_end = self.source.line_range(self.scope)\n",
+      "                             ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^\n",
+      "  File \"c:\\Users\\ijyli\\miniforge3\\envs\\computervision\\Lib\\site-packages\\stack_data\\core.py\", line 178, in line_range\n",
+      "    return line_range(self.asttext(), node)\n",
+      "                      ^^^^^^^^^^^^\n",
+      "AttributeError: 'Source' object has no attribute 'asttext'\n"
+     ]
+    }
+   ],
    "source": [
     "# Packages\n",
     "from ANN_Classifier_Functions import *"
@@ -38,7 +107,7 @@
    "outputs": [],
    "source": [
     "# Sample run or not\n",
-    "sample_run = False"
+    "sample_run = True"
    ]
   },
   {
@@ -51,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "id": "2a46f379",
    "metadata": {},
    "outputs": [
@@ -227,7 +296,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "id": "78478af8",
    "metadata": {},
    "outputs": [],
@@ -245,7 +314,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "id": "0e3123ce",
    "metadata": {},
    "outputs": [
@@ -265,14 +334,6 @@
    "source": [
     "fit_ann_classifier(X_train, y_train, classifier_name)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "cd04dba5",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -291,7 +352,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
